--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 baostock
-TA-Lib >= 0.4.19
 pandas_ta
 ccxt>=1.50.74
--r ./zvt/requirements.txt
--e ./zvt/
+-r zvt/requirements.txt
+-e zvt/
+-r zvt_coin/requirements.txt
+-e zvt_coin/
